--- a/CHSZiK/src/app/main/pages/header/header.component.html
+++ b/CHSZiK/src/app/main/pages/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<body>
+  <div class="wrapper">
+    <img class="logo" src="../../../../assets/img/logo.png" alt="" />
+    <div class="nav">
+      <div class="nav-item">
+        <a rel="stylesheet" href="">Панель администратора</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Просмотр всего оборудования</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Планы работ по обслуживанию</a>
+      </div>
+      <div class="nav-item">
+        <a href="">Список запчастей на складе</a>
+      </div>
+    </div>
+    <div class="profil">
+      <button>
+        <img src="../../../../assets/img/user.png" alt="" />
+      </button>
+    </div>
+  </div>
+</body>
