--- a/CHSZiK/src/app/main/pages/header/header.component.scss
+++ b/CHSZiK/src/app/main/pages/header/header.component.scss
@@ -14,8 +14,8 @@ button img {
 }
 
 .wrapper {
-  margin-right: 40px;
-  margin-left: 40px;
+  margin: 0 auto;
+  width: 1440px;
   height: 80px;
   display: flex;
   justify-content: space-between;
