--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment/list-of-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment/list-of-equipment.component.html
@@ -1,1 +1,20 @@
 <app-header></app-header>
+<div>
+  <div class="wrapper">
+    <div class="header">
+      <h3>Оборудование</h3>
+      <div class="search">
+        <input type="text" placeholder="Поиск" />
+      </div>
+      <button>Добавить новую модель оборудования</button>
+    </div>
+    <div class="container">
+      <div class="item-list">
+        <div class="item">
+          <div class="imgModelEquipment"></div>
+          <div class="nameModelEquimpent">Название:</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
