--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -1,4 +1,3 @@
-<app-header></app-header>
 <div>
   <div class="wrapper">
     <div class="header">
@@ -8,10 +7,14 @@
       </div>
     </div>
     <div class="container">
-      <div class="adding-imgModel">
+      <div class="adding-img-model">
         <button>Добавить схему</button>
       </div>
-      <div class="adding-component">asd</div>
+      <div class="adding-component">
+        <div class="content">
+          <app-adding-component></app-adding-component>
+        </div>
+      </div>
     </div>
   </div>
 </div>
