--- a/CHSZiK/src/app/main/pages/list-of-equipment/layout/list-of-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/layout/list-of-equipment.component.html
@@ -5,7 +5,7 @@
       <div class="search">
         <input type="text" placeholder="Поиск" />
       </div>
-      <button>Добавить модель оборудования</button>
+      <button (click)="submitAddingEquipment()">Добавить модель оборудования</button>
     </div>
   </div>
 </div>
