--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.html
@@ -4,17 +4,19 @@
       <div class="number-component">№</div>
       <div class="name-component">
         <p>Название</p>
-        <input type="text" class="input-name-component" />
+        <input type="text" class="input-name-component"/>
       </div>
-      <button class="btn-save-component">Сохранить</button>
+      <button class="btn-save-component" type="button">
+        <img class="img-apply" src="../../../../../../../../assets/img/apply.png">
+      </button>
     </div>
-    <div class="setting-component-checkboxs">
+    <div class="setting-component__checkboxs">
       <div class="checkbox">
-        <input type="checkbox" checked />
+        <input type="checkbox" checked/>
         <label for="">Разбить на состовляющие</label>
       </div>
       <div class="checkbox">
-        <input type="checkbox" checked />
+        <input type="checkbox" checked/>
         <label for="">Включить обслуживание</label>
       </div>
     </div>
