--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/setting-component.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/setting-component.component.html
@@ -1,1 +1,18 @@
-<p>setting-component works!</p>
+<div>
+  <div class="wrapper">
+    <div class="setting-component">
+      <div class="number-component">№</div>
+      <div class="name-component">
+        <p>Название</p>
+      </div>
+    </div>
+    <div class="setting-component__btn">
+      <div class="btn">
+        <button>Добавить состовляющие</button>
+      </div>
+      <div class="btn">
+        <button>Настроить обслуживание</button>
+      </div>
+    </div>
+  </div>
+</div>
