--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
@@ -10,7 +10,7 @@
   justify-content: space-around;
 }
 
-.setting-component-checkboxs {
+.setting-component__checkboxs {
   margin-top: 8px;
   display: flex;
   justify-content: space-around;
@@ -60,6 +60,16 @@
   width: 50px;
   height: 50px;
   border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
+
+  .img-apply {
+    width: 45px;
+    height: 45px;
+  }
 }
 
 .input-name-component {
