--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -1,20 +1,33 @@
 <div>
   <div class="wrapper">
-    <div class="header">
-      <button class="btn-back">Назад</button>
+    <div class="head">
+      <button class="btn-back">Назад <img class="img-back" src="../../../../../../../assets/img/back.png"></button>
       <div class="search">
         <input type="text" placeholder="Название оборудования" />
       </div>
     </div>
     <div class="container">
       <div class="adding-img-model">
-        <button>Добавить схему</button>
+<!--        <button class="adding-img-model__btn">Добавить схему</button>-->
+        <input type="file">
       </div>
       <div class="adding-component">
-        <div class="content">
+        <div class="adding-component__content">
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
+          <app-setting-component></app-setting-component>
           <app-adding-component></app-adding-component>
         </div>
       </div>
+    </div>
+    <div class="save">
+      <button class="save__btn">Сохранить</button>
     </div>
   </div>
 </div>
