--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -6,22 +6,64 @@
 .wrapper {
   width: 1440px;
   margin: 0 auto;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
-.header {
-  display: flex;
+.head {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  justify-content: center;
+  align-items: center;
 }
+
+.btn-back {
+  width: 133px;
+  height: 55px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
+  border-radius: 5px;
+
+
+  .img-back {
+    width: 50px;
+    height: 50px;
+  }
+}
+
 
 .container {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
 }
 
 .adding-img-model {
   width: 650px;
   height: 850px;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.adding-img-model__btn{
+  width: 183px;
+  height: 50px;
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
+  border-radius: 25px;
+  justify-self: start;
+
 }
 .adding-component {
   width: 650px;
@@ -29,6 +71,35 @@
   border-radius: 25px;
 }
 
-.content {
+.adding-component__content {
   margin-top: 10px;
+  margin-bottom: 10px;
 }
+.search input{
+  font-size: 16px;
+  text-align: center;
+  width: 460px;
+  height: 40px;
+  border-radius: 5px;
+  margin: 0 auto;
+}
+.search {
+  justify-self: center;
+}
+
+.save {
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+.save__btn{
+  width: 230px;
+  height: 50px;
+  border: none;
+  background-color: #E3B800;
+  border: 3px solid #A49343;
+  border-radius: 25px;
+}
+
