Создал страницу с добавлением модели

--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -14,20 +14,12 @@
       <div class="adding-component">
         <div class="adding-component__content">
           <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
-          <app-setting-component></app-setting-component>
           <app-adding-component></app-adding-component>
         </div>
       </div>
     </div>
     <div class="save">
-      <button class="save__btn">Сохранить</button>
+      <button class="save__btn" (click)="submitMainTenanceSheetEditing" >Сохранить</button>
     </div>
   </div>
 </div>
