--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
@@ -1,4 +1,4 @@
-<div class="item">
+<div (click)="openSettings()" class="item">
   <div class="image-model-equipment">
     <img [src]="models.image_plan_reference" alt="">
   </div>
