--- a/CHSZiK/src/app/main/pages/header/header.component.html
+++ b/CHSZiK/src/app/main/pages/header/header.component.html
@@ -3,7 +3,7 @@
     <img class="logo" src="../../../../assets/img/logo.png" alt="" />
     <div class="nav">
       <div class="nav-item">
-        <a rel="stylesheet" href="">Панель администратора</a>
+        <a href="">Панель администратора</a>
       </div>
       <div class="nav-item">
         <a href="">Просмотр всего оборудования</a>
