--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
@@ -19,6 +19,12 @@
   height: 300px;
   border-radius: 5px;
   border: 1px solid black;
+  margin-top: 10px;
+}
+
+.setting {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .name-model-equipment {
