--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/components/maintenance-sheet-editing/maintenance-sheet-editing.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/components/maintenance-sheet-editing/maintenance-sheet-editing.component.scss
@@ -48,17 +48,65 @@
   margin-bottom: 15px;
   background-color: rgba(164, 147, 67, 0.5);
   border-radius: 25px;
+  Padding-bottom: 15px;
 }
 
 .list {
-  padding-top: 20px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .list__item {
+  margin-top: 20px;
   background-color: white;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 650px;
+  padding-bottom: 10px;
+}
+
+.list-documentation {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.list-documentation__item {
+  width: 1370px;
+  background-color: white;
+  border-radius: 5px;
+  padding-bottom: 10px;
+}
+
+.list-documentation__header {
+  font-size: 32px;
+  display: flex;
+  justify-content: center;
+}
+
+.list-documentation__content {
+  font-size: 16px;
+  margin-top: 10px;
+  display: flex;
+}
+
+.item__content {
+  background-color: #D9D9D9;
+  border-radius: 5px;
+  width: 340px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.item__content input {
+
 }
 
 .border {
@@ -79,5 +127,73 @@
   background-color: #E3B800;
   border: 3px solid #A49343;
   border-radius: 25px;
+}
+
+.item {
+  margin-top: 10px;
+  display: flex;
+  background-color: #D9D9D9;
+  border-radius: 25px;
+  width: 635px;
+  height: 50px;
+  align-items: center;
+  font-size: 16px;
+  justify-content: space-around;
+}
+
+.item__header {
+  font-size: 32px;
+  margin: 0 auto;
+}
+
+.item__name {
+  display: flex;
+  margin-left: 10px;
+  width: 100px;
+}
+
+.item__input-name {
+  width: 270px;
+  height: 40px;
+  border-radius: 5px;
+}
+
+.item__input-quantity {
+  width: 120px;
+  height: 40px;
+  border-radius: 5px;
+}
+
+.btn__save-item {
+  margin-left: 5px;
+}
+.btn-save-component {
+  width: 45px;
+  height: 45px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
+
+  .img-apply {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+.btn-delete-component {
+  border-radius: 25px;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .img-close {
+    width: 35px;
+    height: 35px;
+  }
 }
 
