готово вложенное добавление и переходы

--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -2,13 +2,16 @@
   <div class="wrapper">
     <div class="head">
       <button class="btn-back" (click)="btnBack()">Назад <img class="img-back" src="../../../../../../../assets/img/back.png"></button>
-      <div class="search">
+      <div class="head__name">
         <input type="text" placeholder="Название оборудования" />
+        <p></p>
+        <button>Редактировать</button>
       </div>
     </div>
     <div class="container">
       <div class="adding-img-model">
         <input type="file">
+        <button>Редактировать</button>
       </div>
       <div class="adding-component">
         <div class="adding-component__content">
