--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -75,7 +75,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.search input{
+.head__name input{
   font-size: 16px;
   text-align: center;
   width: 460px;
@@ -83,7 +83,7 @@
   border-radius: 5px;
   margin: 0 auto;
 }
-.search {
+.head__name {
   justify-self: center;
 }
 
