--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -75,8 +75,8 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.head__name input{
-  font-size: 16px;
+.head__name {
+  font-size: 32px;
   text-align: center;
   width: 460px;
   height: 40px;
@@ -85,6 +85,10 @@
 }
 .head__name {
   justify-self: center;
+}
+
+.input {
+  font-size: 16px;
 }
 
 .save {
