Добавление родительской модели

--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -1,20 +1,22 @@
 <div>
-  <div class="wrapper">
+  <div class="wrapper" *ngIf="parent || isNew">
     <div class="head">
       <button class="btn-back" (click)="btnBack()">Назад <img class="img-back" src="../../../../../../../assets/img/back.png"></button>
-      <div *ngIf="parent.equipment_name" >
-        <p class="head__name">{{parent.equipment_name}}</p>
-        <button>Редактировать</button>
+      <div *ngIf="!isNew" >
+        <p class="head__name">{{parent?.equipment_name}}</p>
+        <button (click)="addingParentPart()">Редактировать</button>
       </div>
-      <div *ngIf="parent.equipment_name == null">
-        <input class="head__name input" type="text" placeholder="Название" />
-        <button>Сохранить</button>
+      <div [formGroup]="addingNewModelForm">
+        <input *ngIf="isNew" formControlName="equipment_name" class="head__name input" type="text" placeholder="Название" />
+        <button *ngIf="!isNew">Сохранить</button>
       </div>
     </div>
     <div class="container">
       <div class="adding-img-model">
-        <input type="file">
-        <button>Редактировать</button>
+        <input *ngIf="parent?.image_plan_reference == null" type="file">
+        <input *ngIf="isNew" type="file">
+        <img *ngIf="parent?.image_plan_reference != null" class="img-model" [src]="parent.image_plan_reference" alt="">
+        <button *ngIf="parent?.image_plan_reference != null" >Редактировать</button>
       </div>
       <div class="adding-component">
         <div class="adding-component__content">
@@ -24,7 +26,7 @@
       </div>
     </div>
     <div class="save">
-      <button class="save__btn">Сохранить</button>
+      <button (click)="btnAddingNewModel()" class="save__btn">Сохранить</button>
     </div>
   </div>
 </div>
