--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -63,8 +63,13 @@
   background-color: #E3B800;
   border-radius: 25px;
   justify-self: start;
-
 }
+
+.img-model {
+  width: 100%;
+  height: 100%;
+}
+
 .adding-component {
   width: 650px;
   background-color: rgba(164, 147, 67, 0.5);
