Фикс добавления нового оборудования

--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="save">
-      <button (click)="btnAddingNewModel()" class="save__btn">Сохранить</button>
+      <button (click)="saveNewModel()" class="save__btn">Сохранить</button>
     </div>
   </div>
 </div>
