--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -17,6 +17,11 @@
   align-items: center;
 }
 
+.img-change {
+  width: 40px;
+  height: 40px;
+}
+
 .btn-back {
   width: 133px;
   height: 55px;
@@ -55,6 +60,26 @@
   border-radius: 5px;
 }
 
+.model-img {
+  height: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn__img-change {
+  margin-top: 10px;
+  width: 180px;
+  height: 42px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 16px;
+  border: 3px solid #A49343;
+  background-color: #E3B800;
+  border-radius: 5px;
+}
+
 .adding-img-model__btn{
   width: 183px;
   height: 50px;
@@ -66,6 +91,7 @@
 }
 
 .img-model {
+  border-radius: 5px;
   width: 100%;
   height: 100%;
 }
@@ -87,12 +113,25 @@
   height: 40px;
   border-radius: 5px;
   margin: 0 auto;
+  background-color: #d9d9d9;
 }
 .head__name {
   justify-self: center;
 }
 
+.head__name-change {
+  border: none;
+  margin-left: 5px;
+  background-color: white;
+}
+
+.head-name {
+  align-items: center;
+  display: flex;
+}
+
 .input {
+  background-color: white;
   font-size: 16px;
 }
 
@@ -107,6 +146,7 @@
   width: 230px;
   height: 50px;
   border: none;
+  font-size: 16px;
   background-color: #E3B800;
   border: 3px solid #A49343;
   border-radius: 25px;
