--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="adding-component">
         <div class="adding-component__content">
-          <app-setting-component *ngFor="let part of part" [part]="part"></app-setting-component>
+          <app-setting-component (send)="upgradeComponent($event)" *ngFor="let part of part" [part]="part"></app-setting-component>
           <app-adding-component (send)="addingComponent($event)"></app-adding-component>
         </div>
       </div>
