--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.html
@@ -33,11 +33,7 @@
       </div>
     </div>
 
-    <div *ngIf="isUpgrade" (click)="btnDeleteComponent()" class="btn-delete-component">
-      Удалить составляющую
-    </div>
-
-
+    <button *ngIf="isUpgrade" (click)="btnDeleteComponent()" class="btn-delete__component">Удалить составляющую</button>
 
     <div *ngIf="!isUpgrade" class="open-setting-component__btn">
       <div *ngIf="part.have_equipment" class="btn">
